Update Big Data Project.ipynb

--- a/Big Data Project.ipynb
+++ b/Big Data Project.ipynb
@@ -1675,7 +1675,7 @@
     "#from sklearn.cross_validation import train_test_split ## Omar: it's deprecated \n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\n",
+    "## Omar: Remove non categorical elements: ['Age', 'Flight_Distance']\n",
     "feature_col_names = ['Gender', 'Customer_Type', 'Age', 'Type_of_Travel', \n",
     "                     'Class', 'Flight_Distance', 'Seat_comfort', \n",
     "                     'Arival_time','Gate_location','Inflight_wifi_service',\n",
