--- a/Big Data Project.ipynb
+++ b/Big Data Project.ipynb
@@ -1732,7 +1732,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Naive Bayes Algorithm"
+    "<a id=\"top\"></a>\n",
+    "## Table of Algorithms\n",
+    "\n",
+    "1. [Naive Bayes](#NB)\n",
+    "2. [Random Forest](#RF)\n",
+    "3. [Decision Tree](#DT)\n",
+    "4. [K-Nearest Neigbors](#KNN)\n",
+    "5. [Logistic Regression](#LR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='NB'></a>\n",
+    "## 1. Naive Bayes Algorithm\n",
+    "[Top](#top)"
    ]
   },
   {
@@ -1946,7 +1962,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Random Forest Algorithm"
+    "<a id='RF'></a>\n",
+    "## 2. Random Forest Algorithm\n",
+    "[Top](#top)"
    ]
   },
   {
@@ -2153,7 +2171,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Decision Tree Algorithm"
+    "<a id='DT'></a>\n",
+    "## 3. Decision Tree Algorithm\n",
+    "[Top](#top)"
    ]
   },
   {
@@ -2492,7 +2512,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. K-Nearest Neighbors Algorithm"
+    "<a id='KNN'></a>\n",
+    "## 4. K-Nearest Neighbors Algorithm\n",
+    "[Top](#top)"
    ]
   },
   {
@@ -2699,7 +2721,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Logistic Regression Algorithm"
+    "<a id='LR'></a>\n",
+    "## 5. Logistic Regression Algorithm\n",
+    "[Top](#top)"
    ]
   },
   {
