add explanation about dataset

--- a/Big Data Project.ipynb
+++ b/Big Data Project.ipynb
@@ -899,6 +899,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This expalanation about this dataset**\n",
+    "* **Satisfaction:** Airline satisfaction level(Satisfaction, neutral or dissatisfaction)\n",
+    "* **Age:** The actual age of the passengers\n",
+    "* **Gender:** Gender of the passengers (Female, Male)\n",
+    "* **Type of Travel:** Purpose of the flight of the passengers (Personal Travel, Business Travel)\"\n",
+    "* **Class:** Travel class in the plane of the passengers (Business, Eco, Eco Plus)\"\n",
+    "* **Customer Type:** The customer type (Loyal customer, disloyal customer\n",
+    "* **Flight distance:** The flight distance of this journey\n",
+    "* **Inflight wifi service:** Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\"\n",
+    "* **Ease of Online booking:** Satisfaction level of online booking\n",
+    "* **Inflight service:** Satisfaction level of inflight service\n",
+    "* **Online boarding:** Satisfaction level of online boarding\n",
+    "* **Inflight entertainment:** Satisfaction level of inflight entertainment\n",
+    "* **Food and drink:** Satisfaction level of Food and drink\n",
+    "* **Seat comfort:** Satisfaction level of Seat comfort\n",
+    "* **On-board service:** Satisfaction level of On-board service\n",
+    "* **Leg room service:** Satisfaction level of Leg room service\n",
+    "* **Departure/Arrival time convenient:** Satisfaction level of Departure/Arrival time convenient\n",
+    "* **Baggage handling:** Satisfaction level of baggage handling\n",
+    "* **Gate location:** Satisfaction level of Gate location\n",
+    "* **Cleanliness:** Satisfaction level of Cleanliness\n",
+    "* **Check-in service:** Satisfaction level of Check-in service\n",
+    "* **Departure Delay in Minutes:** Minutes delayed when departure\n",
+    "* **Arrival Delay in Minutes:** Minutes delayed when Arrival"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
